--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "files.watcherExclude": {
     "**/target": true
   },
-  "editor.acceptSuggestionOnEnter": "on"
+  "editor.acceptSuggestionOnEnter": "on",
+  "java.compile.nullAnalysis.mode": "automatic"
 }
